# erthiscan-core

./: Dockerfile  README.md  db_scheme  pyproject.toml  requirements.txt
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_top_level_report_count.py  0003_add_pending_vote_count.py  0004_add_open_facts_products.py  0005_add_reports_and_votes.py  0006_add_vote_sum_to_reports.py  0007_add_refresh_tokens.py  0008_add_trigram_search.py  0009_drop_open_facts_products.py  0010_refresh_token_expires_at.py
app/: cache.py  config.py  events.py  main.py  rate_limit.py  worker.py
app/api/: auth.py  barcode.py  companies.py  deps.py  reports.py
app/collector/: open_facts.py  open_facts_dump.py  utils.py
app/enricher/: company_score.py
app/models/: __init__.py  company.py  database.py  open_facts_product.py  product.py  refresh_token.py  report.py  user.py  vote.py
infra/: 04-traefik.yaml
k8s/: 03-deployment.yaml  05-gateway.yaml  06-httproute.yaml  deployment.yaml  gateway.yaml  httproute.yaml  migration-job.yaml  open-facts-import-cronjob.yaml
tests/: conftest.py  test_auth.py  test_cache.py  test_companies.py  test_health.py
